<resources>
    <string name="app_name">ClassicProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="phone_2">Телефон 2</string>
    <string name="email">e-mail</string>
    <string name="email_2">e-mail 2</string>
    <string name="empty">...</string>
    <string name="description">Description</string>
    <string name="contact_list_bar">Список контактов</string>
    <string name="contact_details_bar">Детали контакта</string>
</resources>